# MIDI2ORG

./: CMakeLists.txt  README.md  README.txt
lib/MIDIParse/: CMakeLists.txt
src/: File.cpp  File.h  MIDI2ORG.cpp  MIDI2ORG.h
